# CreatureRogue

./: .gitignore  .noserc  .travis.yml  README.md  battle_ai.py  battle_renderer.py  battle_state.py  battle_test.py  create_ascii_map.py  creature_creator.py  data.py  db_layer.py  encounter-test.py  extract_tiles.py  features.txt  game.py  location_area_rects.txt  main.py  map_loader.py  map_renderer.py  map_state.py  map_test.py  maps.py  models.py  pokedex_renderer.py  pokedex_state.py  pokedex_test.py  pyproject.toml  requirements.txt  settings.py  travis.yml
.github/workflows/: tests.yml
CreatureRogue/: battle_ai.py  battle_calculations.py  battle_renderer.py  battle_state.py  creature_creator.py  data.py  db_layer.py  game.py  game_menu_renderer.py  game_menu_state.py  main.py  map_state.py  models.py  pokedex_renderer.py  pokedex_state.py  settings.py
CreatureRogue/data/: data.py  db_layer.py  status_effects.py
CreatureRogue/data_layer/: ailment.py  color.py  data.py  db_layer.py  encounter.py  growth_rate.py  location.py  location_area.py  location_area_rect.py  location_area_rect_collection.py  map_data_tile_type.py  map_loader.py  move_data.py  move_target.py  pokeball.py  region.py  species.py  stat.py  status_effects.py  type.py  type_chart.py  xp_lookup.py
CreatureRogue/maps/: __init__.py  kanto.py  map_renderer.py
CreatureRogue/models/: battle_creature.py  battle_data.py  creature.py  game_data.py  map.py  move.py  player.py
CreatureRogue/renderer/: battle_renderer.py  console_renderer.py  game_menu_renderer.py  map_renderer.py  pokedex_renderer.py
CreatureRogue/states/: battle_state.py  game_menu_state.py  map_state.py  pokedex_state.py
maps/: __init__.py  kanto.py  map_renderer.py  pallet-town.py  pallet_town.py  route-1.py  route_1.py
tests/data_layer/: ailment_test.py  ailment_tests.py  encounter_test.py  encounter_tests.py  location_area_rect_test.py  location_area_rect_tests.py  location_area_test.py  location_area_tests.py  move_data_test.py  move_data_tests.py  pokeball_test.py  pokeball_tests.py  species_test.py  species_tests.py  type_chart_test.py  type_chart_tests.py
tests/models/: battle_creature_test.py  battle_creature_tests.py
