[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "creaturerogue"
version = "0.1.0"
description = "A Pokemon-inspired roguelike game"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "David Tyler" }
]
keywords = ["game", "roguelike", "pokemon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "tcod>=19.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
]

[project.scripts]
creaturerogue = "CreatureRogue.game:main"

[project.urls]
Homepage = "https://github.com/DaveTCode/CreatureRogue"
Repository = "https://github.com/DaveTCode/CreatureRogue"

[tool.hatch.build.targets.wheel]
packages = ["CreatureRogue"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=CreatureRogue"

[tool.coverage.run]
source = ["CreatureRogue"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "PIE",    # flake8-pie
    "RET",    # flake8-return
    "PTH",    # flake8-use-pathlib
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RET504", # unnecessary assignment before return
]

[tool.ruff.lint.isort]
known-first-party = ["CreatureRogue"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
